Fix color contrast in footer
Reported by Lighthouse

--- a/src/Enfo.WebApp/Client/site.css
+++ b/src/Enfo.WebApp/Client/site.css
@@ -133,7 +133,7 @@ small {
 .gaepd-footer {
     color: #fff;
     border-top: 3px solid HSL(195, 2%, 32%);
-    background: #948d84;
+    background: #5d5751;
     font-family: Verdana, sans-serif;
     font-size: 1.2rem;
     text-align: center;
@@ -170,6 +170,7 @@ small {
 
 #gagov_external_blocks-footer #zone-footer-wrapper {
     min-height: 200px;
+    background: #5d5751 !important;
 }
 
 .gaepd-avatar {
